tests/ui/parser/issues/issue-6610.stderr
error: expected one of `->`, `;`, `where`, or `{`, found `}`
  --> $DIR/issue-6610.rs:1:20
   |
LL | trait Foo { fn a() }
   |                -   ^ expected one of `->`, `;`, `where`, or `{`
   |                |
   |                while parsing this `fn`

error: aborting due to 1 previous error

