tests/ui/parser/issues/issue-6610.rs
trait Foo { fn a() } //~ ERROR expected one of `->`, `;`, `where`, or `{`, found `}`

fn main() {}
